--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,18 @@ jobs:
         python-version: '3.10'
         cache: 'pip'
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas pytest pytest-cov joblib scikit-learn imbalanced-learn
+        pip install -e .
+
     - name: Create sample data
       run: |
         mkdir -p data
         python -c "
         import pandas as pd;
-        pd.DataFrame({
+        df = pd.DataFrame({
             'step': [1, 2, 3, 4, 5],
             'type': ['CASH_IN', 'CASH_OUT', 'PAYMENT', 'TRANSFER', 'DEBIT'],
             'amount': [100, 200, 300, 400, 500],
@@ -37,14 +43,9 @@ jobs:
             'newbalanceDest': [600, 700, 800, 900, 1000],
             'isFraud': [0, 1, 0, 1, 0],
             'isFlaggedFraud': [0, 0, 0, 0, 0]
-        }).to_csv('data/sample_fraud.csv', index=False)
+        });
+        df.to_csv('data/sample_fraud.csv', index=False)
         "
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .
-        pip install pytest pytest-cov joblib scikit-learn imbalanced-learn pandas
 
     - name: Run tests
       run: |
