--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,64 +9,44 @@ on:
       - 'requirements.txt'
       - 'deployments/**'
 
-env:
-  DOCKER_IMAGE: moeyahya/fraud-detection-api
-  DOCKER_TAG: latest
-
 jobs:
-  build-and-deploy:
+  deploy-to-ecs:
     runs-on: ubuntu-latest
     environment: production
     
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v2
       with:
-        python-version: '3.10'
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ca-central-1
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-
-    - name: Set up Kubernetes
-      id: setup-kube
-      uses: azure/setup-kubectl@v3
-      continue-on-error: true
-
-    - name: Deploy to Kubernetes
-      if: steps.setup-kube.outcome == 'success' && env.KUBE_CONFIG != ''
+    - name: Build, tag, and push to ECR
       env:
-        KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: fraud-detection-api
+        IMAGE_TAG: latest
       run: |
-        if [ -z "$KUBE_CONFIG" ]; then
-          echo "No KUBE_CONFIG set, skipping deployment"
-          exit 0
-        fi
-        
-        mkdir -p ~/.kube
-        echo "$KUBE_CONFIG" > ~/.kube/config
-        chmod 600 ~/.kube/config
-        
-        kubectl apply -f deployments/deployment.yaml
-        kubectl apply -f deployments/service.yaml
-        
-        kubectl rollout status deployment/fraud-detection-api
-        kubectl get pods,svc
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+    - name: Deploy to ECS
+      run: |
+        # Register task definition
+        aws ecs register-task-definition \
+          --cli-input-json file://deployments/ecs-task-definition.json \
+          --region ca-central-1
+
+        # Update ECS service
+        aws ecs update-service \
+          --cluster fraud-api-cluster \
+          --service fraud-detection-service \
+          --task-definition fraud-detection-task \
+          --region ca-central-1
